deployment/gitops/wikijs-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: wikijs-nodeport
  namespace: wiki
  labels:
    app: wikijs
spec:
  type: NodePort
  selector:
    app: wikijs
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30302
